auto definitions and models